Revert "sonar issue07"
This reverts commit c58b85e21fe0327e65a0990d94714efaf02cc34c.