@@ -27,6 +27,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -121,7 +122,7 @@ public class AzureOpenAIService implements EmbeddingService {
 
   @Override
   public Response<List<Embedding>> embedTexts(List<TextSegment> textSegments) {
-    List<String> texts = textSegments.stream().map(TextSegment::text).toList();
+    List<String> texts = textSegments.stream().map(TextSegment::text).collect(Collectors.toList());
     {
       List<Embedding> embeddings = new ArrayList<>();
       int tokenUsage = 0;
